@@ -113,17 +113,16 @@ int co_utf8_mbstrlen(const char *src)
 		if (*ip & 0x80) {
 			size = utf8_mbtowc(&op, ip, maxlen);
 			if (size == -1) {
-				ip += 1;
+				ip++;
 				maxlen--;
 			} else {
 				ip += size;
 				maxlen -= size;
 			}
-			continue;
+		} else {
+			ip++;
+			maxlen--;
 		}
-		
-		ip++;
-		maxlen--;
 	}
 
 	return length;
@@ -155,18 +154,14 @@ co_rc_t co_utf8_mbstowcs(co_wchar_t *dest, const char *src, int maxlen)
 			size = utf8_mbtowc(op, ip, maxlen);
 			if (size == -1) {
 				*op = '?';
-				ip += 1;
-				maxlen--;
+				ip++;
 			} else {
 				ip += size;
-				maxlen -= 1;
 			}
-			
-			op++;
-			continue;
+		} else {
+			*op = *ip++;
 		}
-		
-		*op++ = *ip++;
+		op++;
 		maxlen--;
 	}
 
